# scratch-getdata-server

./: .env  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  admin.html  blocked_username.txt  main.py  otp_email_template.html  out.db  pyproject.toml  replit.nix  requirements.txt  socks4.txt  updates-email.txt  updates.txt  users (copy).db  users.db  weak_passwords.txt
.github/ISSUE_TEMPLATE/: bug-report-for-autoupdate-channel.md  bug-report-for-stable-channel.md  bug_report.md  feature-request-for-autoupdate-channel.md  (+7 more)
ServerFiles/: email_send.py  proxy.py
extra/: caching_test.py  encrypt_database.py  encrypt_my_database.py  encryption_test.py  foo.txt  otp_test.py  out.db  path_to_encrypted.db  proxy_test.py  resetdb.py
static/: email_resend.css  email_verification.css  error.css  hcaptcha-challenge.js  issue.txt  script.js  sidebar.txt  style-dashboard.css  style-nonflash.css  style-nospan.css  style-nospanupdate.css  style-serverstats.css  style-settings.css  style-signup.css  style.css  update.css  updates.txt
templates/: 400.html  401.html  404.html  405.html  500.html  admin.html  blocked.html  contact.html  dashboard.html  docs.html  email_resend.html  email_template.html  email_verification.html  gotohome.html  index.html  index_test.html  indexsidebar.html  install.html  keynotfound.html  login.html  loginerror.html  nokeyprovided.html  otp_verification.html  pricing.html  problems.html  python-docs.html  serverstats.html  settingdashboard.html  settingprofile.html  settings.html  signup.html  subscribe.html  update-test.html  updates.html  why.html
(+6 files in other folders)
