[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "1.26.15"
poetry = "1.1.13"
pyotp = "^2.8.0"
APScheduler = "^3.10.1"
colorama = "^0.4.6"
Flask-AutoIndex = "^0.6.6"
Flask-SQLAlchemy = "^3.0.5"
pycryptodome = "^3.18.0"
bs4 = "^0.0.1"
requests = "^2.31.0"
Pillow = "^10.0.0"
Flask-JWT-Extended = "^4.5.2"
Flask-SocketIO = "^5.3.4"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"